# abot

./: .clang-format  .gitignore  README.md
docs/: README.md
docs/01-ros-fundamentals/: README.md  catkin-workspace-and-build.md  launch-files-and-parameters.md  ros-cli.md  tf-coordinate-frames.md
docs/02-system-architecture/: README.md
docs/03-hardware-driver/: README.md  imu-driver.md  motor-control.md  odom-ekf.md  serial-protocol.md
docs/04-orientation-filter/: README.md  madgwick-filter.md  mahony-filter.md
docs/05-slam-navigation/: README.md  amcl.md  cartographer.md  competition-tuning.md  costmap.md  dwa-local-planner.md  global-planner.md  gmapping.md  move-base.md
docs/06-perception/: README.md  ar-tag-tracking.md  cam-track-pid.md  find-object-2d.md
docs/07-competition-tasks/: README.md  mission-node.md  multi-goal-navigation.md  shoot-control.md  voice-interaction.md
docs/08-competition-playbook/: README.md
src/abot_base/abot_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/abot_base/abot_bringup/include/abot_bringup/: base_driver_config.h  queue.h  serial_transport.h  simple_dataframe.h  simple_dataframe_master.h  variable_queue.h
src/abot_base/abot_bringup/scripts/: odom_ekf.py
src/abot_base/abot_bringup/src/: base_driver.cpp  base_driver_config.cpp  main.cpp  serial_transport.cpp  simple_dataframe_master.cpp
src/abot_base/abot_imu/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/abot_base/abot_imu/src/: abot_imu_node.cpp
src/abot_base/abot_model/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/abot_base/lidar_filters/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/abot_find/: .appveyor.yml  .travis.yml  CHANGELOG.rst  README.md  package.xml
src/abot_find/app/: CMakeLists.txt
src/abot_find/src/: AboutDialog.cpp  AddObjectDialog.h  CMakeLists.txt  CameraTcpServer.cpp  CameraTcpServer.h  FindObject.cpp  ImageDropWidget.cpp  KeypointItem.cpp  ObjSignature.h  ObjWidget.cpp  ParametersToolBox.cpp  ParametersToolBox.h  QtOpenCV.cpp  RectItem.h  TcpServer.cpp  Vocabulary.cpp  resources.qrc
src/abot_find/src/json/: json-forwards.h
src/abot_find/src/ros/: CameraROS.h  FindObjectROS.h  find_object_2d_node.cpp  print_objects_detected_node.cpp
src/abot_find/src/rtabmap/: PdfPlot.h
src/abot_find/src/superpoint_torch/: SuperPoint.cc  SuperPoint.h
src/abot_find/src/ui/: addObjectDialog.ui
src/abot_find/src/utilite/: UConversion.cpp  UConversion.h  (+4 more)
src/applications/abot_mission/: CMakeLists.txt  package.xml
src/applications/abot_mission/launch/: auto_nav.launch
src/applications/user_demo/: CMakeLists.txt
src/applications/user_demo/include/user_demo/: mission_node.hpp
src/cam_track/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/cam_track/include/cam_track/: cam_track_node.hpp
src/imu_filter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/navigation/imu_filter/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/navigation/imu_filter/src/: Madgwick_filter.cpp  Mahony_filter.cpp  bias_calculator.cpp
src/navigation/lidar_follower/: CMakeLists.txt  package.xml
src/navigation/lidar_follower/launch/: follower.launch  laserTracker.launch
src/navigation/lidar_follower/scripts/: follower.py  laserTracker.py
src/navigation/robot_slam/: CHANGELOG.rst  CMakeLists.txt
src/navigation/robot_slam/launch/include/: amcl.launch.xml  gmapping.launch.xml
src/navigation/robot_slam/maps/: my_lab.yaml  my_map.yaml
src/navigation/robot_slam/scripts/: navigation_goals.py  navigation_multi_goals.py
src/navigation/robot_slam/src/: navigate.cpp
src/perception/abot_find/: CHANGELOG.rst  CMakeLists.txt  TODO.md
src/perception/cam_track/: CHANGELOG.rst  package.xml
src/perception/color_pkg/: CMakeLists.txt
src/perception/face_pkg/: CMakeLists.txt
src/perception/opencv_demo/: CMakeLists.txt
src/perception/track_tag/: CMakeLists.txt
src/perception/track_tag/launch/: usb_cam_with_calibration.launch
src/perception/track_tag/rviz/: ar_track_camera.rviz
src/perception/tracker_pkg/: CMakeLists.txt
src/perception/tracker_pkg/shell/: kcf_tracker.sh  lk_tracker.sh
src/platform/abot_base/: CMakeLists.txt  camera.yaml
src/platform/abot_base/launch/: amcl.launch  move_base.launch  multi_goal.launch  nav.launch  navigation_mapping.launch  navigation_multi_demo.launch  view_nav.launch
src/platform/abot_base/maps/: gmapping.pgm  gmapping.yaml  map.pgm
src/platform/abot_base/params/: costmap_common_params_abot.yaml  dwa_local_planner_params_abot.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/platform/abot_base/rviz/: abot_navigation.rviz
src/platform/abot_base/scripts/: mission.py
src/platform/abot_bringup/: TODO.md
src/platform/abot_imu/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/platform/abot_imu/scripts/: simple_magnometer_calibration.py
src/platform/abot_imu/src/: abot_imu.cpp
src/platform/abot_model/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/platform/lidar_filters/: CHANGELOG.rst  CMakeLists.txt
src/platform/shoot_cmd/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/platform/shoot_cmd/src/: shoot_control.cpp
src/robot_slam/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/robot_slam/maps/: my_lab.yaml  my_map.yaml
src/robot_slam/scripts/: navigation_multi_goals111.py
src/robot_voice/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/robot_voice/src/: iat_publish.cpp
src/shoot_cmd/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/shoot_cmd/params/: target.yaml
src/shoot_cmd/src/: SerialPort.cpp  control_center.cpp
src/speech/robot_voice/: CHANGELOG.rst  CMakeLists.txt  TODO.md
src/speech/robot_voice/include/robot_voice/: formats.h  linuxrec.h  msp_types.h  qisr.h  qtts.h
src/speech/robot_voice/src/: linuxrec.c  speech_recognizer.c  tts_subscribe.cpp  voice_assistant.cpp
src/user_demo/: CHANGELOG.rst  CMakeLists.txt  TODO.md  package.xml
src/user_demo/scripts/: pub_pos.py
src/user_demo/src/: mission_node.cpp
(+94 files in other folders)
